--- a/kokokeyboard/src/main/res/values/styles.xml
+++ b/kokokeyboard/src/main/res/values/styles.xml
@@ -1,15 +1,5 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="materialButtonStyle">@style/Widget.Button.Inverse </item>
-    </style>
-
-
     <style name="Widget.Button" parent="Widget.MaterialComponents.Button">
         <item name="enforceTextAppearance">false</item>
         <item name="android:textColor">@android:color/white</item>
@@ -21,6 +11,7 @@
     <style name="Widget.TextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="fontFamily">sans-serif/</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="Widget.Button.Inverse" parent="Widget.Button">
