--- a/sample/src/main/res/layout/activity_keyboard.xml
+++ b/sample/src/main/res/layout/activity_keyboard.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,7 +34,7 @@
                     style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Something wih custom keypad"
+                    android:hint="Type Something with custom keypad"
                     android:inputType="text"
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -56,7 +57,6 @@
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_input_stockkeypad_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -75,7 +75,6 @@
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
@@ -83,11 +82,14 @@
     <com.rowland.kokokeyboard.keypad.KokoKeyboardView
         android:id="@+id/keyboardview"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/transparent"
+        android:background="@android:color/background_light"
         android:elevation="1dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        tools:layout_height="200dp" />
+        app:ael_duration="300"
+        app:ael_expanded="false"
+        app:ael_orientation="vertical"
+        tools:layout_height="250dp" />
 </RelativeLayout>
