refactor: just some code refactor.

--- a/kokokeyboard/src/main/res/layout/qwerty_keypad.xml
+++ b/kokokeyboard/src/main/res/layout/qwerty_keypad.xml
@@ -9,7 +9,8 @@
     <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
         android:id="@+id/keyboard_qwerty_one"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <com.rowland.kokokeyboard.keys.SquareKeyView
             android:id="@+id/key_q"
@@ -97,7 +98,8 @@
     <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
         android:id="@+id/keyboard_qwerty_two"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <Space
             android:layout_width="0dp"
@@ -178,7 +180,8 @@
     <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
         android:id="@+id/keyboard_qwerty_three"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <Space
             android:layout_width="0dp"
@@ -245,7 +248,8 @@
     <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
         android:id="@+id/keyboard_qwerty_four"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <Space
             android:layout_width="0dp"
