fix: with chnage in collapsible library, the issue of layout hiding when using wrap_content is removed.

--- a/sample/src/main/res/layout/activity_keyboard.xml
+++ b/sample/src/main/res/layout/activity_keyboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -85,11 +85,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@android:color/background_light"
-        android:elevation="1dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        app:ael_duration="300"
-        app:ael_expanded="true"
-        app:ael_orientation="vertical"
+        android:orientation="vertical"
+        app:el_expanded="true"
+        app:el_parallax="0.5"
+        app:elevation="1dp"
         tools:layout_height="250dp" />
 </RelativeLayout>
