--- a/sample/src/main/res/layout/activity_keyboard.xml
+++ b/sample/src/main/res/layout/activity_keyboard.xml
@@ -25,8 +25,6 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
                 android:layout_margin="5dp">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -34,7 +32,7 @@
                     style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Something with custom keypad"
+                    android:hint="@string/type_something_with_custom_keypad"
                     android:inputType="text"
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -44,15 +42,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
                 android:layout_margin="5dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_text_non_num"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Something with no numbers"
+                    android:hint="@string/type_something_with_no_numbers"
                     android:inputType="text"
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -62,15 +58,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
                 android:layout_margin="5dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_text_stockkeypad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Something with android stock keypad"
+                    android:hint="@string/type_something_with_android_stock_keypad"
                     android:inputType="text"
                     android:textColor="@android:color/black" />
             </com.google.android.material.textfield.TextInputLayout>
