--- a/kokokeyboard/src/main/res/values/styles.xml
+++ b/kokokeyboard/src/main/res/values/styles.xml
@@ -1,22 +1,24 @@
 <resources>
 
-    <style name="Widget.Button" parent="Widget.MaterialComponents.Button">
-        <item name="enforceTextAppearance">false</item>
+    <style name="Widget.Keys.Button.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:textColor">@android:color/white</item>
-        <item name="backgroundTint">?android:attr/colorAccent</item>
-        <item name="android:textAppearance">@style/Widget.TextAppearance.Button</item>
+        <item name="enforceTextAppearance">false</item>
+        <item name="android:textAppearance">@style/Widget.Keys.TextAppearance.Button</item>
+        <item name="android:paddingLeft">1dp</item>
+        <item name="android:paddingRight">1dp</item>
+        <item name="android:insetLeft">2dp</item>
+        <item name="android:insetRight">2dp</item>
+        <item name="cornerRadius">3dp</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">@color/key_stroke_selector</item>
     </style>
 
+    <style name="Widget.Keys.Button.Inverse" parent="Widget.Keys.Button.OutlinedButton">
+        <item name="android:textColor">?android:attr/colorAccent</item>
+    </style>
 
-    <style name="Widget.TextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
+    <style name="Widget.Keys.TextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="fontFamily">sans-serif/</item>
-        <item name="android:textSize">10sp</item>
     </style>
-
-    <style name="Widget.Button.Inverse" parent="Widget.Button">
-        <item name="android:textColor">?android:attr/colorAccent</item>
-        <item name="backgroundTint">@android:color/white</item>
-    </style>
-
 </resources>
